Bug 579077 - WARNING: NS_ENSURE_TRUE(mBoundFrame) failed: file ../../../../../content/html/content/src/nsTextEditorState.cpp, line 1326; r=jst approval2.0=benjamin